Switched the website to the live coding template

--- a/js/index.html
+++ b/js/index.html
@@ -48,7 +48,7 @@
         </div>
     </div>
 
-    <script type="module" src="index.js"></script>
+    <script type="module" src="index_live.js"></script>
 </body>
 
 </html>
